Added video search and updated app

--- a/App/Android/app/src/main/res/layout/activity_main.xml
+++ b/App/Android/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:onClick="OpenFilebrowser"
         android:text="Stream from file"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
