--- a/App/Android/app/src/main/res/layout/activity_stream.xml
+++ b/App/Android/app/src/main/res/layout/activity_stream.xml
@@ -26,10 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="15dp"
+        android:onClick="stopStream"
         android:text="@string/stop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
